Added Inno's FAQ, and began absorbing it into the wider wiki